--- a/templates/index.html
+++ b/templates/index.html
@@ -16,42 +16,16 @@
     <label for="file">Upload CSV file:</label>
     <input type="file" name="file" accept=".csv" required><br><br>
 
-    <button type="submit">Run Mondrian</button>
+    <label for="algorithm">Select Algorithm:</label>
+    <select name="algorithm" required>
+      <option value="mondrian">Mondrian</option>
+      <option value="glutton">Glutton</option>
+    </select><br><br>  
+
+    <button type="submit">Anonymize</button>
   </form>
   <br>
   <br>
-
-  <strong>Or Enter manually table:</strong>
-  <form id="uploadForm" method="POST" action="/process" enctype="multipart/form-data">
-    <label for="k">Enter value of k:</label>
-    <input type="number" name="k" required min="1"><br><br>
-    <table>
-      <tr>
-        <th>ID</th>
-        <td><input type="text" placeholder="id-value"></td>
-      </tr>
-      <tr>
-        <th>Age</th>
-        <td><input type="text" placeholder="age-value"></td>
-      </tr>
-      <tr>
-        <th>Gender</th>
-        <td><input type="text" placeholder="gender-value"></td>
-      </tr>
-      <tr>
-        <th>ZIP</th>
-        <td><input type="text" placeholder="zip-value"></td>
-      </tr>
-      <tr>
-        <th>Disease</th>
-        <td><input type="text" placeholder="disease-value"></td>
-      </tr>
-    </table>
-    <label for="file">Upload CSV file:</label>
-    <input type="file" name="file" accept=".csv" required><br><br>
-
-    <button type="submit-data">Run Mondrian</button>
-  </form>
 
 
 
