Added export of data from website

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,9 @@
       <option value="glutton">Glutton</option>
     </select><br><br>  
 
+    <label for="outpath">Enter anonymized data output location:</label>
+    <input type="text" name="outpath" required><br><br>
+
     <button type="submit">Anonymize</button>
   </form>
   <br>
